hphp/hack/test/typecheck/call_generic_multiple_bounds_1.php.exp
File "call_generic_multiple_bounds_1.php", line 5, characters 10-13:
This call is invalid, this is not a function, it is a value of generic type T (Typing[4009])
